--- a/index.html
+++ b/index.html
@@ -14,8 +14,11 @@
     <link rel="apple-touch-icon-precomposed" sizes="72x72" href="i/icons/apple-touch-icon-72x72-precomposed.png">
     <link rel="apple-touch-icon-precomposed" href="i/icons/apple-touch-icon-precomposed.png">
     <meta name="msapplication-TileImage" content="i/icons/ms-touch-icon-144x144-precomposed.png">
-    <meta name="msapplication-TileColor" content="#3372DF">
+    <meta name="msapplication-TileColor" content="#106DA6">
     <link rel="shortcut icon" sizes="196x196" href="i/icons/touch-icon-196x196.png">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black">
+    <meta name="apple-mobile-web-app-title" content="">
     <link rel="stylesheet" href="css/app.css">
     <link rel="stylesheet" href="css/font-awesome.min.css"><!--[if (gte IE 6)&(lte IE 9)]>
     <script src="js/vendor/respond.min.js"></script>
@@ -28,7 +31,9 @@
   </head>
   <body>
     <div class="page-wrap">
+      <header></header>
       <main></main>
+      <footer></footer>
     </div>
     <!--[if (!IE)|(gt IE 8)]><!-->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.0/jquery.min.js"></script>
@@ -36,7 +41,6 @@
     <!--[if lte IE 8]>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
     <![endif]-->
-    <script src="//api-maps.yandex.ru/2.1-dev/?lang=ru-RU&amp;load=package.full" type="text/javascript"></script>
     <script src="js/vendor/jquery.placeholder.js"></script>
     <script src="js/app.js"></script>
   </body>
