--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Главная - Change me</title>
+    <title>Главная - Автошкола АНИК</title>
     <meta name="keywords" content="">
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -20,7 +20,9 @@
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
     <meta name="apple-mobile-web-app-title" content="">
     <link rel="stylesheet" href="css/app.css">
-    <link rel="stylesheet" href="css/font-awesome.min.css"><!--[if (gte IE 6)&(lte IE 9)]>
+    <link rel="stylesheet" href="css/font-awesome.min.css">
+    <link rel="stylesheet" href="fonts/kelson/kelson.css">
+    <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Roboto+Condensed:400,700&amp;subset=latin,cyrillic" type="text/css"><!--[if (gte IE 6)&(lte IE 9)]>
     <script src="js/vendor/respond.min.js"></script>
     <script src="js/vendor/html5shiv.min.js"></script>
     <script src="js/vendor/nwmatcher-1.2.5-min.js"></script>
@@ -31,8 +33,20 @@
   </head>
   <body>
     <div class="page-wrap">
-      <header></header>
-      <main></main>
+      <header class="header"><a href="/" class="header__logo"></a></header>
+      <div id="navbar" class="navbar"><a href="#menu" class="navbar__menulink"><i class="fa fa-navicon"></i>&nbsp;Меню</a>
+        <nav id="menu" role="navigation">
+          <ul>
+            <li><a href="#">Главная</a></li>
+            <li><a href="#">Новости и акции</a></li>
+            <li><a href="#">Автошкола</a></li>
+            <li><a href="#">Обучение</a></li>
+            <li><a href="#">Форум</a></li>
+            <li><a href="#">Контакты</a></li>
+            <li><a href="#">Мы в соцсетях</a></li>
+          </ul>
+        </nav>
+      </div>
       <footer></footer>
     </div>
     <!--[if (!IE)|(gt IE 8)]><!-->
