--- a/index.html
+++ b/index.html
@@ -33,33 +33,48 @@
   </head>
   <body>
     <div class="page-wrap">
-      <header class="header"><a href="/" class="header__logo"></a><a href="#" class="btn">ЗАПИСАТЬСЯ НА ОБУЧЕНИЕ</a></header>
+      <header class="header">
+        <div class="container">
+          <div class="grid-12 grid-sm-5 grid-md-5 header__leftside"><a href="/" class="header__logo"></a></div>
+          <div class="grid-12 grid-sm-5 push-sm-2 grid-md-7 push-md-0 header__rightside">
+            <div class="header__contacts grid-sm-12 grid-md-5 hide-xs">
+              <div class="header__contacts__phone"><i class="fa fa-mobile-phone phone-icon"></i><small>Единая справочная</small>
+                <h2>8 (423) 2-205-203</h2>
+              </div>
+              <div class="header__contacts__links"><i class="fa fa-refresh"></i><a href="#">Заказать звонок</a><i class="fa fa-user"></i><a href="#">Кабинет</a></div>
+            </div>
+            <div class="grid-sm-12 grid-md-7"><a href="#" class="btn">ЗАПИСАТЬСЯ НА ОБУЧЕНИЕ</a></div>
+          </div>
+        </div>
+      </header>
       <div id="navbar" class="navbar"><a href="#menu" class="navbar__menulink"><i class="fa fa-navicon"></i>&nbsp;Меню</a>
-        <nav id="menu" role="navigation">
-          <ul>
-            <li><a href="#">Главная</a></li>
-            <li><a href="#">Новости и акции</a></li>
-            <li class="dropdown"><a href="#">Автошкола</a>
-              <ul>
-                <li><a href="#">Процесс обучения</a></li>
-                <li><a href="#">Стоимость</a></li>
-                <li><a href="#">Документы</a></li>
-                <li><a href="#">Дополнительные услуги</a></li>
-              </ul>
-            </li>
-            <li class="dropdown"><a href="#">Обучение</a>
-              <ul>
-                <li><a href="#">Процесс обучения</a></li>
-                <li><a href="#">Стоимость</a></li>
-                <li><a href="#">Документы</a></li>
-                <li><a href="#">Дополнительные услуги</a></li>
-              </ul>
-            </li>
-            <li><a href="#">Форум</a></li>
-            <li><a href="#">Контакты</a></li>
-            <li class="navbar__social"><a href="#">Мы в соцсетях &nbsp;<i class="fa fa-vk"></i></a></li>
-          </ul>
-        </nav>
+        <div class="container">
+          <nav id="menu" role="navigation">
+            <ul>
+              <li><a href="#">Главная</a></li>
+              <li><a href="#">Новости и акции</a></li>
+              <li class="dropdown"><a href="#">Автошкола</a>
+                <ul>
+                  <li><a href="#">Процесс обучения</a></li>
+                  <li><a href="#">Стоимость</a></li>
+                  <li><a href="#">Документы</a></li>
+                  <li><a href="#">Дополнительные услуги</a></li>
+                </ul>
+              </li>
+              <li class="dropdown"><a href="#">Обучение</a>
+                <ul>
+                  <li><a href="#">Процесс обучения</a></li>
+                  <li><a href="#">Стоимость</a></li>
+                  <li><a href="#">Документы</a></li>
+                  <li><a href="#">Дополнительные услуги</a></li>
+                </ul>
+              </li>
+              <li><a href="#">Форум</a></li>
+              <li><a href="#">Контакты</a></li>
+              <li class="navbar__social"><a href="#">Мы в соцсетях &nbsp;<i class="fa fa-vk"></i></a></li>
+            </ul>
+          </nav>
+        </div>
       </div>
       <footer></footer>
     </div>
