--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                 <div class="craousel__item"><img src="i/placeholders/1.jpg"></div>
                 <div class="craousel__item"><img src="i/placeholders/1.jpg"></div>
                 <div class="craousel__item"><img src="i/placeholders/1.jpg"></div>
-              </div>
+              </div><a href="#" class="carousel__nav carousel__nav--left"></a><a href="#" class="carousel__nav carousel__nav--right"></a>
             </div>
           </div>
         </div>
