header + slider ready

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Главная - Автошкола АНИК</title>
     <meta name="keywords" content="">
     <meta name="description" content="">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
     <meta name="mobile-web-app-capable" content="yes">
     <link rel="icon" type="image/png" href="i/favicon.png">
     <link rel="apple-touch-icon-precomposed" sizes="144x144" href="i/icons/apple-touch-icon-144x144-precomposed.png">
@@ -16,9 +16,6 @@
     <meta name="msapplication-TileImage" content="i/icons/ms-touch-icon-144x144-precomposed.png">
     <meta name="msapplication-TileColor" content="#106DA6">
     <link rel="shortcut icon" sizes="196x196" href="i/icons/touch-icon-196x196.png">
-    <meta name="apple-mobile-web-app-capable" content="yes">
-    <meta name="apple-mobile-web-app-status-bar-style" content="black">
-    <meta name="apple-mobile-web-app-title" content="">
     <link rel="stylesheet" href="css/app.css">
     <link rel="stylesheet" href="css/font-awesome.min.css">
     <link rel="stylesheet" href="fonts/kelson/kelson.css">
@@ -29,7 +26,7 @@
     <script src="js/vendor/selectivizr-1.0.3b.js"></script>
     <link rel="stylesheet" href="css/ie.css">
     <![endif]-->
-    <script src="js/vendor/modernizr.js"></script><script>document.write('<script src="http://' + (location.host || 'localhost').split(':')[0] + ':35729/livereload.js?snipver=1"></' + 'script>')</script>
+    <script src="js/vendor/modernizr.js"></script>
   </head>
   <body onload="loaded()">
     <div class="page-wrap">
@@ -81,13 +78,39 @@
           <div class="carousel__viewport">
             <div id="carousel" class="carousel__container">
               <div class="carousel__scroller">
-                <div class="craousel__item"><img src="i/placeholders/1.jpg"></div>
-                <div class="craousel__item"><img src="i/placeholders/1.jpg"></div>
-                <div class="craousel__item"><img src="i/placeholders/1.jpg"></div>
+                <div class="carousel__item">
+                  <div class="item__caption">
+                    <h4>Только этим Летом!</h4>
+                    <h3>Комплект литературы</h3>
+                    <h2>В подарок</h2>
+                  </div>
+                  <div class="item__pic"><img src="i/placeholders/slide-1-pic.png"></div>
+                </div>
+                <div class="carousel__item rtl">
+                  <div class="item__caption">
+                    <div class="bar">
+                      <div class="bar__filled">95% наших учеников</div>
+                    </div>
+                    <h3>Сдали экзамен</h3>
+                    <h2>С 1 раза</h2>
+                  </div>
+                  <div class="item__pic"><img src="i/placeholders/slide-2-pic.png" class="pic--car"></div>
+                </div>
+                <div class="carousel__item">
+                  <div class="item__caption">
+                    <h4>Только этим Летом!</h4>
+                    <h3>Комплект литературы</h3>
+                    <h2>В подарок</h2>
+                  </div>
+                  <div class="item__pic"><img src="i/placeholders/slide-1-pic.png"></div>
+                </div>
               </div><a href="#" class="carousel__nav carousel__nav--left"></a><a href="#" class="carousel__nav carousel__nav--right"></a>
             </div>
           </div>
         </div>
+      </div>
+      <div class="container">
+        <p>Lorem ipsum Sint ex consequat sit aute dolor aute adipisicing minim non tempor irure Excepteur minim sed fugiat irure ut in nisi esse sit laborum magna non cupidatat fugiat exercitation adipisicing sint occaecat dolor deserunt magna Ut nostrud et aliqua consectetur adipisicing nulla laboris minim ut deserunt voluptate ea culpa dolor commodo voluptate sunt ut dolor eiusmod est deserunt eu in laborum cillum sed eiusmod consequat fugiat cupidatat ut occaecat reprehenderit adipisicing ullamco ea sed quis commodo esse non occaecat est in ut est laborum officia culpa enim aliquip qui amet in elit cupidatat in quis eiusmod aliqua ex exercitation dolor id minim cupidatat aliqua pariatur qui eu sit dolore magna eu reprehenderit irure incididunt velit laborum amet nisi aliqua dolore occaecat in esse cillum ullamco aute adipisicing aliquip officia officia in Duis in reprehenderit non commodo incididunt officia laborum sunt occaecat et in qui culpa est ad ullamco cupidatat cupidatat laboris irure elit tempor.</p>
       </div>
       <footer></footer>
     </div>
