--- a/index.html
+++ b/index.html
@@ -110,9 +110,61 @@
         </div>
       </div>
       <div class="container">
-        <p>Lorem ipsum Sint ex consequat sit aute dolor aute adipisicing minim non tempor irure Excepteur minim sed fugiat irure ut in nisi esse sit laborum magna non cupidatat fugiat exercitation adipisicing sint occaecat dolor deserunt magna Ut nostrud et aliqua consectetur adipisicing nulla laboris minim ut deserunt voluptate ea culpa dolor commodo voluptate sunt ut dolor eiusmod est deserunt eu in laborum cillum sed eiusmod consequat fugiat cupidatat ut occaecat reprehenderit adipisicing ullamco ea sed quis commodo esse non occaecat est in ut est laborum officia culpa enim aliquip qui amet in elit cupidatat in quis eiusmod aliqua ex exercitation dolor id minim cupidatat aliqua pariatur qui eu sit dolore magna eu reprehenderit irure incididunt velit laborum amet nisi aliqua dolore occaecat in esse cillum ullamco aute adipisicing aliquip officia officia in Duis in reprehenderit non commodo incididunt officia laborum sunt occaecat et in qui culpa est ad ullamco cupidatat cupidatat laboris irure elit tempor.</p>
+        <div class="teachers">
+          <h2>Наши преподователи и инструкторы по вождению</h2>
+          <div class="teachers__container">
+            <ul>
+              <li><a href="#"><img src="i/placeholders/avatar-1.jpg" class="teachers__pic">
+                  <h5>Лукан Фёдор</h5><span>автомобиль: Toyota chaser</span>
+                  <p>победитель двух этапов чемпионата кольцевых автогонок Zmeinka</p></a></li>
+              <li><a href="#"><img src="i/placeholders/avatar-2.jpg" class="teachers__pic">
+                  <h5>Лукан Фёдор</h5><span>автомобиль: Toyota chaser</span>
+                  <p>победитель двух этапов чемпионата кольцевых автогонок Zmeinka</p></a></li>
+              <li><a href="#"><img src="i/placeholders/avatar-3.jpg" class="teachers__pic">
+                  <h5>Лукан Фёдор</h5><span>автомобиль: Toyota chaser</span>
+                  <p>победитель двух этапов чемпионата кольцевых автогонок Zmeinka</p></a></li>
+              <li class="hidden-xs"><a href="#"><img src="i/placeholders/avatar-1.jpg" class="teachers__pic">
+                  <h5>Лукан Фёдор</h5><span>автомобиль: Toyota chaser</span>
+                  <p>победитель двух этапов чемпионата кольцевых автогонок Zmeinka</p></a></li>
+              <li class="hidden-xs"><a href="#"><img src="i/placeholders/avatar-2.jpg" class="teachers__pic">
+                  <h5>Лукан Фёдор</h5><span>автомобиль: Toyota chaser</span>
+                  <p>победитель двух этапов чемпионата кольцевых автогонок Zmeinka</p></a></li>
+              <li class="hidden-xs"><a href="#"><img src="i/placeholders/avatar-3.jpg" class="teachers__pic">
+                  <h5>Лукан Фёдор</h5><span>автомобиль: Toyota chaser</span>
+                  <p>победитель двух этапов чемпионата кольцевых автогонок Zmeinka</p></a></li>
+            </ul>
+          </div>
+          <div class="center"><a href="#" class="btn">Смотреть всех</a></div>
+        </div>
+        <div class="news">
+          <h5 class="news__title">Новости компании</h5>
+          <ul>
+            <li><a href="#"><span>15 мая 2014</span>
+                <h5>Семинар-тренинг Громоковского Г.Б.</h5>
+                <p>У Вас есть уникальная возможность принять участие в семинаре Геннадия Громоковского «Защитные методы поведения на дороге» для руководителей</p></a></li>
+            <li><a href="#"><span>15 мая 2014</span>
+                <h5>Семинар-тренинг Громоковского Г.Б.</h5>
+                <p>У Вас есть уникальная возможность принять участие в семинаре Геннадия Громоковского «Защитные методы поведения на дороге» для руководителей</p></a></li>
+            <li><a href="#"><span>15 мая 2014</span>
+                <h5>Семинар-тренинг Громоковского Г.Б.</h5>
+                <p>У Вас есть уникальная возможность принять участие в семинаре Геннадия Громоковского «Защитные методы поведения на дороге» для руководителей</p></a></li>
+            <li><a href="#"><span>15 мая 2014</span>
+                <h5>Семинар-тренинг Громоковского Г.Б.</h5>
+                <p>У Вас есть уникальная возможность принять участие в семинаре Геннадия Громоковского «Защитные методы поведения на дороге» для руководителей</p></a></li>
+            <li><a href="#"><span>15 мая 2014</span>
+                <h5>Семинар-тренинг Громоковского Г.Б.</h5>
+                <p>У Вас есть уникальная возможность принять участие в семинаре Геннадия Громоковского «Защитные методы поведения на дороге» для руководителей</p></a></li>
+          </ul>
+          <div class="center"><a href="#" class="btn">Все новости</a></div>
+        </div>
       </div>
-      <footer></footer>
+      <footer>
+        <div class="container">
+          <div class="footer__contact"><span>Контактная информация</span>
+            <h2>8 (423) 2-205-203, 273-07-08</h2>
+          </div>
+        </div>
+      </footer>
     </div>
     <!--[if (!IE)|(gt IE 8)]><!-->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.0/jquery.min.js"></script>
