--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
                   <p>победитель двух этапов чемпионата кольцевых автогонок Zmeinka</p></a></li>
             </ul>
           </div>
-          <div class="center"><a href="#" class="btn">Смотреть всех</a></div>
+          <div class="center"><a href="#" class="btn hidden-sm">Смотреть всех</a></div>
         </div>
         <div class="news">
           <h5 class="news__title">Новости компании</h5>
@@ -155,7 +155,7 @@
                 <h5>Семинар-тренинг Громоковского Г.Б.</h5>
                 <p>У Вас есть уникальная возможность принять участие в семинаре Геннадия Громоковского «Защитные методы поведения на дороге» для руководителей</p></a></li>
           </ul>
-          <div class="center"><a href="#" class="btn">Все новости</a></div>
+          <div class="center"><a href="#" class="btn hidden-sm">Все новости</a></div>
         </div>
       </div>
       <footer>
@@ -174,6 +174,8 @@
     <![endif]-->
     <script src="js/vendor/jquery.placeholder.js"></script>
     <script src="js/vendor/iscroll.js"></script>
+    <script src="js/vendor/jquery.mousewheel-3.0.6.min.js"></script>
+    <script src="js/vendor/jquery.mCustomScrollbar.min.js"></script>
     <script src="js/app.js"></script>
   </body>
 </html>
