--- a/index.html
+++ b/index.html
@@ -115,23 +115,35 @@
           <div class="teachers__container">
             <ul>
               <li><a href="#"><img src="i/placeholders/avatar-1.jpg" class="teachers__pic">
-                  <h5>Лукан Фёдор</h5><span>автомобиль: Toyota chaser</span>
-                  <p>победитель двух этапов чемпионата кольцевых автогонок Zmeinka</p></a></li>
+                  <div class="teachers__content">
+                    <h5>Лукан Фёдор</h5><span>автомобиль: Toyota chaser</span>
+                    <p>победитель двух этапов чемпионата кольцевых автогонок Zmeinka</p>
+                  </div></a></li>
               <li><a href="#"><img src="i/placeholders/avatar-2.jpg" class="teachers__pic">
-                  <h5>Лукан Фёдор</h5><span>автомобиль: Toyota chaser</span>
-                  <p>победитель двух этапов чемпионата кольцевых автогонок Zmeinka</p></a></li>
+                  <div class="teachers__content">
+                    <h5>Лукан Фёдор</h5><span>автомобиль: Toyota chaser</span>
+                    <p>победитель двух этапов чемпионата кольцевых автогонок Zmeinka</p>
+                  </div></a></li>
               <li><a href="#"><img src="i/placeholders/avatar-3.jpg" class="teachers__pic">
-                  <h5>Лукан Фёдор</h5><span>автомобиль: Toyota chaser</span>
-                  <p>победитель двух этапов чемпионата кольцевых автогонок Zmeinka</p></a></li>
-              <li class="hidden-xs"><a href="#"><img src="i/placeholders/avatar-1.jpg" class="teachers__pic">
-                  <h5>Лукан Фёдор</h5><span>автомобиль: Toyota chaser</span>
-                  <p>победитель двух этапов чемпионата кольцевых автогонок Zmeinka</p></a></li>
-              <li class="hidden-xs"><a href="#"><img src="i/placeholders/avatar-2.jpg" class="teachers__pic">
-                  <h5>Лукан Фёдор</h5><span>автомобиль: Toyota chaser</span>
-                  <p>победитель двух этапов чемпионата кольцевых автогонок Zmeinka</p></a></li>
-              <li class="hidden-xs"><a href="#"><img src="i/placeholders/avatar-3.jpg" class="teachers__pic">
-                  <h5>Лукан Фёдор</h5><span>автомобиль: Toyota chaser</span>
-                  <p>победитель двух этапов чемпионата кольцевых автогонок Zmeinka</p></a></li>
+                  <div class="teachers__content">
+                    <h5>Лукан Фёдор</h5><span>автомобиль: Toyota chaser</span>
+                    <p>победитель двух этапов чемпионата кольцевых автогонок Zmeinka</p>
+                  </div></a></li>
+              <li class="hide-xs"><a href="#"><img src="i/placeholders/avatar-1.jpg" class="teachers__pic">
+                  <div class="teachers__content">
+                    <h5>Лукан Фёдор</h5><span>автомобиль: Toyota chaser</span>
+                    <p>победитель двух этапов чемпионата кольцевых автогонок Zmeinka</p>
+                  </div></a></li>
+              <li class="hide-xs"><a href="#"><img src="i/placeholders/avatar-2.jpg" class="teachers__pic">
+                  <div class="teachers__content">
+                    <h5>Лукан Фёдор</h5><span>автомобиль: Toyota chaser</span>
+                    <p>победитель двух этапов чемпионата кольцевых автогонок Zmeinka</p>
+                  </div></a></li>
+              <li class="hide-xs"><a href="#"><img src="i/placeholders/avatar-3.jpg" class="teachers__pic">
+                  <div class="teachers__content">
+                    <h5>Лукан Фёдор</h5><span>автомобиль: Toyota chaser</span>
+                    <p>победитель двух этапов чемпионата кольцевых автогонок Zmeinka</p>
+                  </div></a></li>
             </ul>
           </div>
           <div class="center"><a href="#" class="btn hidden-sm">Смотреть всех</a></div>
@@ -139,30 +151,84 @@
         <div class="news">
           <h5 class="news__title">Новости компании</h5>
           <ul>
-            <li><a href="#"><span>15 мая 2014</span>
-                <h5>Семинар-тренинг Громоковского Г.Б.</h5>
-                <p>У Вас есть уникальная возможность принять участие в семинаре Геннадия Громоковского «Защитные методы поведения на дороге» для руководителей</p></a></li>
-            <li><a href="#"><span>15 мая 2014</span>
-                <h5>Семинар-тренинг Громоковского Г.Б.</h5>
-                <p>У Вас есть уникальная возможность принять участие в семинаре Геннадия Громоковского «Защитные методы поведения на дороге» для руководителей</p></a></li>
-            <li><a href="#"><span>15 мая 2014</span>
-                <h5>Семинар-тренинг Громоковского Г.Б.</h5>
-                <p>У Вас есть уникальная возможность принять участие в семинаре Геннадия Громоковского «Защитные методы поведения на дороге» для руководителей</p></a></li>
-            <li><a href="#"><span>15 мая 2014</span>
-                <h5>Семинар-тренинг Громоковского Г.Б.</h5>
-                <p>У Вас есть уникальная возможность принять участие в семинаре Геннадия Громоковского «Защитные методы поведения на дороге» для руководителей</p></a></li>
-            <li><a href="#"><span>15 мая 2014</span>
-                <h5>Семинар-тренинг Громоковского Г.Б.</h5>
-                <p>У Вас есть уникальная возможность принять участие в семинаре Геннадия Громоковского «Защитные методы поведения на дороге» для руководителей</p></a></li>
+            <li><a href="#">
+                <div class="news__image"><img src="i/placeholders/placeholder-news-1.jpg"></div>
+                <div class="news__content"><span>15 мая 2014</span>
+                  <h5>Семинар-тренинг Громоковского Г.Б.</h5>
+                  <p>У Вас есть уникальная возможность принять участие в семинаре Геннадия Громоковского «Защитные методы поведения на дороге» для руководителей</p>
+                  <div class="btn">Читать полностью</div>
+                </div></a></li>
+            <li><a href="#">
+                <div class="news__image"><img src="i/placeholders/placeholder-news-2.jpg"></div>
+                <div class="news__content"><span>15 мая 2014</span>
+                  <h5>Внимание! Изменение маршрута городских занятий!</h5>
+                  <p>Возможность принять участие в семинаре Геннадия Громоковского «Защитные методы поведения на дороге»  для руководителей</p>
+                  <div class="btn">Читать полностью</div>
+                </div></a></li>
+            <li><a href="#">
+                <div class="news__image"><img src="i/placeholders/placeholder-news-1.jpg"></div>
+                <div class="news__content"><span>15 мая 2014</span>
+                  <h5>Семинар-тренинг Громоковского Г.Б.</h5>
+                  <p>У Вас есть уникальная возможность принять участие в семинаре Геннадия Громоковского «Защитные методы поведения на дороге» для руководителей</p>
+                  <div class="btn">Читать полностью</div>
+                </div></a></li>
+            <li class="hide-sm"><a href="#">
+                <div class="news__image"><img src="i/placeholders/placeholder-news-2.jpg"></div>
+                <div class="news__content"><span>15 мая 2014</span>
+                  <h5>Внимание! Изменение маршрута городских занятий!</h5>
+                  <p>Возможность принять участие в семинаре Геннадия Громоковского «Защитные методы поведения на дороге»  для руководителей</p>
+                  <div class="btn">Читать полностью</div>
+                </div></a></li>
+            <li class="hide-sm"><a href="#">
+                <div class="news__image"><img src="i/placeholders/placeholder-news-1.jpg"></div>
+                <div class="news__content"><span>15 мая 2014</span>
+                  <h5>Семинар-тренинг Громоковского Г.Б.</h5>
+                  <p>У Вас есть уникальная возможность принять участие в семинаре Геннадия Громоковского «Защитные методы поведения на дороге» для руководителей</p>
+                  <div class="btn">Читать полностью</div>
+                </div></a></li>
           </ul>
-          <div class="center"><a href="#" class="btn hidden-sm">Все новости</a></div>
+          <div class="center"><a href="#" class="btn hidden-sm">Все новости</a></div><a href="#" class="news__all hide-xs show-md">Все новости</a>
         </div>
       </div>
       <footer>
         <div class="container">
+          <div class="footer__col">
+            <ul>
+              <li class="item__main"><a href="#">Автошкола</a></li>
+              <li><a href="#">История</a></li>
+              <li><a href="#">Достижения</a></li>
+              <li><a href="#">Фотолагерея</a></li>
+              <li><a href="#">Учредительные документы</a></li>
+            </ul>
+          </div>
+          <div class="footer__col">
+            <ul>
+              <li class="item__main"><a href="#">Обучение</a></li>
+              <li><a href="#">Процесс обучения</a></li>
+              <li><a href="#">Стоимость</a></li>
+              <li><a href="#">Документы</a></li>
+              <li><a href="#">Дополнительные услуги</a></li>
+            </ul>
+          </div>
+          <div class="footer__col">
+            <ul>
+              <li class="item__main"><a href="#">Новости и акции</a></li>
+              <li class="item__main"><a href="#">Форум</a></li>
+              <li class="item__main"><a href="#">Мы в соц сетях <i class="fa fa-vk"></i></a></li>
+            </ul>
+          </div>
+          <div class="footer__col footer__col--last">
+            <ul>
+              <li class="item__main"><a href="#">Контакты</a></li>
+              <li><a href="#">Карта офисов и классов</a></li>
+              <li><a href="#">Контакты</a></li>
+            </ul>
+          </div>
+          <div class="footer__info">Сайт разработан в соответствии с федеральным законом об образовании РФ</div>
           <div class="footer__contact"><span>Контактная информация</span>
             <h2>8 (423) 2-205-203, 273-07-08</h2>
           </div>
+          <div class="footer__developer"><i class="iastudio__logo"></i> Разработка сайта - <a href="http://iastudio.ru">Интерактив</a></div>
         </div>
       </footer>
     </div>
