--- a/news.html
+++ b/news.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Главная - Автошкола АНИК</title>
+    <title>Новости и акции - Автошкола АНИК</title>
     <meta name="keywords" content="">
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
@@ -79,122 +79,87 @@
           </nav>
         </div>
       </div>
-      <div class="container">
-        <div class="carousel">
-          <div class="carousel__viewport">
-            <div id="carousel" class="carousel__container">
-              <div class="carousel__scroller">
-                <div class="carousel__item">
-                  <div class="item__caption">
-                    <h4>Только этим Летом!</h4>
-                    <h3>Комплект литературы</h3>
-                    <h2>В подарок</h2>
-                  </div>
-                  <div class="item__pic"><img src="i/placeholders/slide-1-pic.png"></div>
-                </div>
-                <div class="carousel__item rtl">
-                  <div class="item__caption">
-                    <div class="bar">
-                      <div class="bar__filled">95% наших учеников</div>
-                    </div>
-                    <h3>Сдали экзамен</h3>
-                    <h2>С 1 раза</h2>
-                  </div>
-                  <div class="item__pic"><img src="i/placeholders/slide-2-pic.png" class="pic--car"></div>
-                </div>
-                <div class="carousel__item">
-                  <div class="item__caption">
-                    <h4>Только этим Летом!</h4>
-                    <h3>Комплект литературы</h3>
-                    <h2>В подарок</h2>
-                  </div>
-                  <div class="item__pic"><img src="i/placeholders/slide-1-pic.png"></div>
-                </div>
-              </div><a href="#" class="carousel__nav carousel__nav--left"></a><a href="#" class="carousel__nav carousel__nav--right"></a>
+      <div class="container innercontent">
+        <aside class="sidebar">
+          <div class="sidebar__nav sidebar--taglist">
+            <div class="sidebar__nav__inner">
+              <nav>
+                <h2>Поиск по тегам</h2>
+                <ul>
+                  <li class="tag-size-b"><a href="#">Акция</a></li>
+                  <li class="tag-size-c"><a href="#">Категория Б</a></li>
+                  <li class="tag-size-a"><a href="#">Скидки</a></li>
+                  <li class="tag-size-d"><a href="#">Обучение</a></li>
+                  <li class="tag-size-h"><a href="#">Акция</a></li>
+                  <li class="tag-size-b"><a href="#">Категория Б</a></li>
+                  <li class="tag-size-f"><a href="#">Скидки</a></li>
+                  <li class="tag-size-e"><a href="#">Обучение</a></li>
+                  <li class="tag-size-d"><a href="#">автодром</a></li>
+                  <li class="tag-size-a"><a href="#">автошкола</a></li>
+                  <li class="tag-size-c"><a href="#">инструктор</a></li>
+                </ul>
+              </nav>
             </div>
           </div>
-        </div>
-      </div>
-      <div class="container">
-        <div class="teachers">
-          <h2>Наши преподователи и инструкторы по вождению</h2>
-          <div class="teachers__container">
+        </aside>
+        <main class="content">
+          <h1>Новости и акции</h1>
+          <div class="breadcrumbs">
             <ul>
-              <li><a href="#"><img src="i/placeholders/avatar-1.jpg" class="teachers__pic">
-                  <div class="teachers__content">
-                    <h5>Лукан Фёдор</h5><span>автомобиль: Toyota chaser</span>
-                    <p>победитель двух этапов чемпионата кольцевых автогонок Zmeinka</p>
-                  </div></a></li>
-              <li><a href="#"><img src="i/placeholders/avatar-2.jpg" class="teachers__pic">
-                  <div class="teachers__content">
-                    <h5>Лукан Фёдор</h5><span>автомобиль: Toyota chaser</span>
-                    <p>победитель двух этапов чемпионата кольцевых автогонок Zmeinka</p>
-                  </div></a></li>
-              <li><a href="#"><img src="i/placeholders/avatar-3.jpg" class="teachers__pic">
-                  <div class="teachers__content">
-                    <h5>Лукан Фёдор</h5><span>автомобиль: Toyota chaser</span>
-                    <p>победитель двух этапов чемпионата кольцевых автогонок Zmeinka</p>
-                  </div></a></li>
-              <li class="hide-xs"><a href="#"><img src="i/placeholders/avatar-1.jpg" class="teachers__pic">
-                  <div class="teachers__content">
-                    <h5>Лукан Фёдор</h5><span>автомобиль: Toyota chaser</span>
-                    <p>победитель двух этапов чемпионата кольцевых автогонок Zmeinka</p>
-                  </div></a></li>
-              <li class="hide-xs"><a href="#"><img src="i/placeholders/avatar-2.jpg" class="teachers__pic">
-                  <div class="teachers__content">
-                    <h5>Лукан Фёдор</h5><span>автомобиль: Toyota chaser</span>
-                    <p>победитель двух этапов чемпионата кольцевых автогонок Zmeinka</p>
-                  </div></a></li>
-              <li class="hide-xs"><a href="#"><img src="i/placeholders/avatar-3.jpg" class="teachers__pic">
-                  <div class="teachers__content">
-                    <h5>Лукан Фёдор</h5><span>автомобиль: Toyota chaser</span>
-                    <p>победитель двух этапов чемпионата кольцевых автогонок Zmeinka</p>
-                  </div></a></li>
+              <li><a href="#">Главная</a></li>
+              <li><a href="#">Новости и акции</a></li>
             </ul>
           </div>
-          <div class="center"><a href="#" class="btn hidden-sm">Смотреть всех</a></div>
-        </div>
-        <div class="news">
-          <h5 class="news__title">Новости компании</h5>
-          <ul>
-            <li><a href="#">
+          <div class="news">
+            <ul>
+              <li>
                 <div class="news__image"><img src="i/placeholders/placeholder-news-1.jpg"></div>
                 <div class="news__content"><span>15 мая 2014</span>
                   <h5>Семинар-тренинг Громоковского Г.Б.</h5>
                   <p>У Вас есть уникальная возможность принять участие в семинаре Геннадия Громоковского «Защитные методы поведения на дороге» для руководителей</p>
+                  <p>Теги: <a href="#">Акция</a>, <a href="#">Экзамен в ГАИ</a></p>
                   <div class="btn">Читать полностью</div>
-                </div></a></li>
-            <li><a href="#">
+                </div>
+              </li>
+              <li>
                 <div class="news__image"><img src="i/placeholders/placeholder-news-2.jpg"></div>
                 <div class="news__content"><span>15 мая 2014</span>
                   <h5>Внимание! Изменение маршрута городских занятий!</h5>
                   <p>Возможность принять участие в семинаре Геннадия Громоковского «Защитные методы поведения на дороге»  для руководителей</p>
+                  <p>Теги: <a href="#">Акция</a>, <a href="#">Экзамен в ГАИ</a></p>
                   <div class="btn">Читать полностью</div>
-                </div></a></li>
-            <li><a href="#">
+                </div>
+              </li>
+              <li>
                 <div class="news__image"><img src="i/placeholders/placeholder-news-1.jpg"></div>
                 <div class="news__content"><span>15 мая 2014</span>
                   <h5>Семинар-тренинг Громоковского Г.Б.</h5>
                   <p>У Вас есть уникальная возможность принять участие в семинаре Геннадия Громоковского «Защитные методы поведения на дороге» для руководителей</p>
+                  <p>Теги: <a href="#">Акция</a>, <a href="#">Экзамен в ГАИ</a></p>
                   <div class="btn">Читать полностью</div>
-                </div></a></li>
-            <li class="hide-sm"><a href="#">
+                </div>
+              </li>
+              <li>
                 <div class="news__image"><img src="i/placeholders/placeholder-news-2.jpg"></div>
                 <div class="news__content"><span>15 мая 2014</span>
                   <h5>Внимание! Изменение маршрута городских занятий!</h5>
                   <p>Возможность принять участие в семинаре Геннадия Громоковского «Защитные методы поведения на дороге»  для руководителей</p>
+                  <p>Теги: <a href="#">Акция</a>, <a href="#">Экзамен в ГАИ</a></p>
                   <div class="btn">Читать полностью</div>
-                </div></a></li>
-            <li class="hide-sm"><a href="#">
+                </div>
+              </li>
+              <li>
                 <div class="news__image"><img src="i/placeholders/placeholder-news-1.jpg"></div>
                 <div class="news__content"><span>15 мая 2014</span>
                   <h5>Семинар-тренинг Громоковского Г.Б.</h5>
                   <p>У Вас есть уникальная возможность принять участие в семинаре Геннадия Громоковского «Защитные методы поведения на дороге» для руководителей</p>
+                  <p>Теги: <a href="#">Акция</a>, <a href="#">Экзамен в ГАИ</a></p>
                   <div class="btn">Читать полностью</div>
-                </div></a></li>
-          </ul>
-          <div class="center"><a href="#" class="btn hidden-sm">Все новости</a></div><a href="#" class="news__all hide-xs show-md">Все новости</a>
-        </div>
+                </div>
+              </li>
+            </ul>
+          </div>
+        </main>
       </div>
       <footer>
         <div class="container">
