--- a/contacts-2.html
+++ b/contacts-2.html
@@ -101,7 +101,7 @@
               <li><a href="#">Главная</a></li>
               <li>Карта офисов и классов</li>
             </ul>
-          </div>
+          </div><a href="#" class="btn contacts__item__showBigmap">Показать карту</a><a href="#" class="btn contacts__item__hideBigmap">Скрыть карту</a>
         </main>
       </div>
       <footer>
