--- a/contacts.html
+++ b/contacts.html
@@ -105,7 +105,9 @@
           <div class="contacts__item">
             <h2>ОФИС на Алеутской, 11</h2>
             <p>Учебный  класс и офис расположены вблизи остановки общественного транспорта "Ж/д  вокзал", в здании "ПриморГражданПроекта."</p>
-            <div id="map-1" class="contacts__item__map"></div>
+            <div class="contacts__item__map__container">
+              <div id="map-1" class="contacts__item__map"></div><a href="#" class="btn contacts__item__showmap">Показать карту</a><a href="#" class="btn contacts__item__hidemap">Скрыть карту</a>
+            </div>
             <div class="contacts__item__info"><i class="icon-pin"></i>Алеутская, 11<br>Офис по работе с клиентами находится рядом с учебным классом на 8-ом этаже, каб. 805/5</div>
             <div class="contacts__item__info"><i class="icon-phone"></i>8 (423) 2-205-203, 273-07-08</div>
             <div class="contacts__item__info"><i class="icon-time"></i>с 10:00 до 19:00 (Запись на обучение, консультация) <a href="#">Расписание занятий</a></div>
@@ -113,7 +115,9 @@
           <div class="contacts__item">
             <h2>ОФИС на Светланской, 147</h2>
             <p>Офис и учебный класс на ул. Светланской, 147 расположены вблизи остановки общественного транспорта "Авангард" в здании "Центра народной культуры"</p>
-            <div id="map-2" class="contacts__item__map"></div>
+            <div class="contacts__item__map__container">
+              <div id="map-2" class="contacts__item__map"></div><a href="#" class="btn contacts__item__showmap">Показать карту</a><a href="#" class="btn contacts__item__hidemap">Скрыть карту</a>
+            </div>
             <div class="contacts__item__info"><i class="icon-pin"></i>Светланская, 147<br>Офис № 5 расположен на 1-ом этаже, учебный класс на 3-ем этаже здания.</div>
             <div class="contacts__item__info"><i class="icon-phone"></i>8 (423) 2-205-203, 273-07-08</div>
             <div class="contacts__item__info"><i class="icon-time"></i>с 10:00 до 19:00 (Запись на обучение, консультация) <a href="#">Расписание занятий</a></div>
@@ -121,7 +125,9 @@
           <div class="contacts__item">
             <h2>ОФИС на Калинина, 230</h2>
             <p>Офис и учебный класс расположены вблизи остановки общественного транспорта "Диомид"</p>
-            <div id="map-3" class="contacts__item__map"></div>
+            <div class="contacts__item__map__container">
+              <div id="map-3" class="contacts__item__map"></div><a href="#" class="btn contacts__item__showmap">Показать карту</a><a href="#" class="btn contacts__item__hidemap">Скрыть карту</a>
+            </div>
             <div class="contacts__item__info"><i class="icon-pin"></i>Калинина, 230</div>
             <div class="contacts__item__info"><i class="icon-phone"></i>8 (423) 2-205-203, 273-07-08</div>
             <div class="contacts__item__info"><i class="icon-time"></i>с 10:00 до 19:00 (Запись на обучение, консультация) <a href="#">Расписание занятий</a></div>
@@ -129,7 +135,9 @@
           <div class="contacts__item">
             <h2>ОФИС на Партизанском пр-те, 36</h2>
             <p>Офис и учебный класс расположены вблизи остановки общественного транспорта  "Инструментальный завод" по адресу Партизанский пр-т 36.</p>
-            <div id="map-4" class="contacts__item__map"></div>
+            <div class="contacts__item__map__container">
+              <div id="map-4" class="contacts__item__map"></div><a href="#" class="btn contacts__item__showmap">Показать карту</a><a href="#" class="btn contacts__item__hidemap">Скрыть карту</a>
+            </div>
             <div class="contacts__item__info"><i class="icon-pin"></i>Партизанский пр-т, 36<br>2ой этаж, офис 10 (вход со стороны подъездов)</div>
             <div class="contacts__item__info"><i class="icon-phone"></i>8 (423) 2-205-203, 273-07-08</div>
             <div class="contacts__item__info"><i class="icon-time"></i>с 10:00 до 19:00 (Запись на обучение, консультация) <a href="#">Расписание занятий</a></div>
@@ -137,21 +145,27 @@
           <div class="contacts__item">
             <h2>ОФИС на 100 лет Владивостоку, 40 а</h2>
             <p>Офис и учебный класс, расположены вблизи остановки общественного транспорта "100-летие Владивостоку"</p>
-            <div id="map-5" class="contacts__item__map"></div>
+            <div class="contacts__item__map__container">
+              <div id="map-5" class="contacts__item__map"></div><a href="#" class="btn contacts__item__showmap">Показать карту</a><a href="#" class="btn contacts__item__hidemap">Скрыть карту</a>
+            </div>
             <div class="contacts__item__info"><i class="icon-pin"></i>пр. 100 лет Владивостоку, 40 а<br>В торговом центре "Зенит" на 4-ом этаже.</div>
             <div class="contacts__item__info"><i class="icon-phone"></i>8 (423) 2-205-203, 273-07-08</div>
             <div class="contacts__item__info"><i class="icon-time"></i>с 10:00 до 19:00 (Запись на обучение, консультация) <a href="#">Расписание занятий</a></div>
           </div>
           <div class="contacts__item">
             <h2>ОФИС на Авроровской, 20</h2>
-            <div id="map-6" class="contacts__item__map"></div>
+            <div class="contacts__item__map__container">
+              <div id="map-6" class="contacts__item__map"></div><a href="#" class="btn contacts__item__showmap">Показать карту</a><a href="#" class="btn contacts__item__hidemap">Скрыть карту</a>
+            </div>
             <div class="contacts__item__info"><i class="icon-pin"></i>ул. Авроровская, 20</div>
             <div class="contacts__item__info"><i class="icon-phone"></i>8 (423) 2-205-203, 273-07-08</div>
             <div class="contacts__item__info"><i class="icon-time"></i>с 10:00 до 19:00 (Запись на обучение, консультация) <a href="#">Расписание занятий</a></div>
           </div>
           <div class="contacts__item">
             <h2>Автодром на западной, 29</h2>
-            <div id="map-7" class="contacts__item__map"></div>
+            <div class="contacts__item__map__container">
+              <div id="map-7" class="contacts__item__map"></div><a href="#" class="btn contacts__item__showmap">Показать карту</a><a href="#" class="btn contacts__item__hidemap">Скрыть карту</a>
+            </div>
             <div class="contacts__item__info"><i class="icon-pin"></i>Западная, 29</div>
             <div class="contacts__item__info"><i class="icon-phone"></i>8 (423) 2-205-203, 273-07-08</div>
             <div class="contacts__item__info"><i class="icon-time"></i>с 10:00 до 19:00 (Запись на обучение, консультация) <a href="#">Расписание занятий</a></div>
