fixes fixes fixes

--- a/index.html
+++ b/index.html
@@ -245,6 +245,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
     <![endif]-->
     <script src="//api-maps.yandex.ru/2.1/?lang=ru_RU" type="text/javascript"></script>
+    <script src="js/vendor/fastclick.js"></script>
     <script src="js/vendor/jquery.placeholder.js"></script>
     <script src="js/vendor/iscroll.js"></script>
     <script src="js/vendor/jquery.mousewheel-3.0.6.min.js"></script>
