--- a/school.html
+++ b/school.html
@@ -149,7 +149,7 @@
           <div class="footer__contact"><span>Контактная информация</span>
             <h2>8 (423) 2-205-203, 273-07-08</h2>
           </div>
-          <div class="footer__developer"><i class="iastudio__logo"></i> Разработка сайта - <a href="http://iastudio.ru">Интерактив</a></div>
+          <div class="footer__developer"><i class="iastudio__logo"></i> Разработка сайта - <a href="http://iastudio.ru" target="_blank">Интерактив</a></div>
         </div>
       </footer>
     </div>
